Fixed the footer spacing and gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -288,15 +288,16 @@ button:hover {
 }
 
 footer {
-  width: 99%;
+  width: 100%;
   /* position: fixed; */
+  margin-top: 50px;
   bottom: 0;
   z-index: 999;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: .75fr .5fr 1fr;
   background: var(--surface); /* Optional background */
   /* max-width: fit-content; */
-  padding: 40px;
+  padding: 20px;
   gap: 20px;
   box-shadow: 5px 5px 5px 2px rgba(0, 0, 0, 0.2); /* h v blur spread color */
   color: var(--text);
@@ -347,7 +348,7 @@ footer {
     flex-wrap: wrap;
   }
 
-  footer {
+  .footer {
     display: grid;
     position: relative;
     grid-template-columns: 1fr;
